started using inputstream and classloader when getting the html for the widgets so that it works in production